--- a/exercicios/steam/mobile.css
+++ b/exercicios/steam/mobile.css
@@ -21,12 +21,14 @@ html {
     height: 98vh;
     background-image: url('imagens/background.webp');
     position: relative;
-}
+    overflow: hidden;
+} 
 
 header {
     background-color: #171A21;
-    width: 97vw;
-    padding: 5px;
+    width: 96vw;
+    padding: 9px;
+    
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
@@ -50,6 +52,7 @@ div#menu {
     background-color: #171A21;
     box-shadow: 2px 3px 4px #0000007e;
     display: none; 
+    z-index: 10;
 
 
 }
@@ -123,6 +126,7 @@ section#idiomas {
     border-top: 1px solid rgb(0, 174, 255);
     position: relative;
     display: none;
+   
      
 }
 #idiomas > h1{
@@ -189,6 +193,7 @@ div#footer > img {
 }
 div#footer {
     position: absolute;
+    
     bottom: 25px;
     padding: 15px;
         
@@ -198,4 +203,55 @@ div#footer > p{
     color: rgb(167, 165, 165);
     font-size: 0.7em;
     text-align: justify;
+}
+
+
+#busca {
+    display: block;
+    background-image: linear-gradient(to right, #3B608C 30%, #2C578D 50%, #142A73 80%);
+    height: 27vh;
+    width: 100vw;
+   
+    position: static;
+     
+}
+
+#busca > ul > li{
+    padding: 4px 0px 4px 13px;
+}
+#busca > ul > li > a{
+    color: white;
+    font-size: 0.7em;
+    font-weight: 700;
+    text-shadow: 0px 3px 4px #00000054;
+}
+
+input#search{
+    position: static;
+    bottom: 2px;
+    width: 96vw;
+    transform: translateX(2%);
+    background-color: #5F849B;
+    border-radius: 2px;
+    padding: 1px 0px 1px 3px;
+    border: 1px solid #374b58;
+    box-shadow: inset 0px 0px 8px 0px #00000057;
+    color: white;
+}
+input#search:hover {
+    border: white;
+    transition: 0.5ms ;
+}
+#busca >ul > li:hover{
+    background-image: linear-gradient(to right,#317CBB 50%, #244885,#152C75 90%);
+}
+::placeholder{
+    color:  #14181b;
+    font-style: italic;
+}
+
+video{
+    transform: translateX(-20%);
+    position: static;
+     
 }
